# VSI-my-get_product

./: .gitignore  LICENSE  README.md  get_prod.py  pyproject.toml  requirements.txt
