[project]
name = "VSI-my-get_product"
version = "0.0.1"
authors = [
    { name = "Martin Vorländer", email = "martin.vorlaender@t-online.de" },
]
description = "A small program to list and download new versions of VSI's open source products"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests >= 2.32',
    'beautifulsoup4 >= 4.12',
    'soupsieve >= 2.6',
    'wget >= 3.2',
]

[build-system]
requires = ["setuptools >= 65.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/mvorl/VSI-my-get_product"
Issues = "https://github.com/mvorl/VSI-my-get_product/issues"
